project: fix missing colors on job-log page

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -4903,12 +4903,9 @@
     }
     /.job-log {
       c: fg 0 bg;
-      .build-trace-container {
-        .collapsible-line:hover {
-          c: 0 0 hl;
-        }
-      }
+      .collapsible-line:hover { c: 0 0 hl }
       .log-duration-badge { c: 0 0 bd }
+      .line-number { c: cm }
     }
   }
 
